force-app/main/default/objects/Application_Log__b/fields/Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type__c</fullName>
    <description>Ex: System.SObjectException</description>
    <label>Exception Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>