force-app/main/default/objects/Application_Log__b/fields/Execution_Date__c.field-meta.xml
<CustomField>
    <fullName>Execution_Date__c</fullName>
    <label>Execution Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>