force-app/main/default/objects/Application_Log__b/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>&apos;DEBUG&apos; or &apos;ERROR&apos;</description>
    <label>Level</label>
    <length>10</length>
    <type>Text</type>
</CustomField>